--- a/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/packages.config
+++ b/Ghpr.SpecFlow.Examples/Ghpr.SpecFlow.MSTest.Examples/packages.config
@@ -1,11 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ghpr.Core" version="0.8.2" targetFramework="net452" />
-  <package id="Ghpr.MSTest.SpecFlowPlugin" version="0.8.2" targetFramework="net452" />
-  <package id="Ghpr.MSTest.TestContext.SpecFlowPlugin" version="0.8.2" targetFramework="net452" />
-  <package id="Ghpr.SpecFlow.Common" version="0.8.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
-  <package id="SpecFlow" version="2.3.1" targetFramework="net452" />
-  <package id="SpecFlow.CustomPlugin" version="2.3.1" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="BoDi" version="1.4.1" targetFramework="net461" />
+  <package id="Cucumber.Messages" version="6.0.1" targetFramework="net461" />
+  <package id="Gherkin" version="6.0.0" targetFramework="net461" />
+  <package id="Ghpr.Core" version="0.9.12" targetFramework="net452" requireReinstallation="true" />
+  <package id="Ghpr.LocalFileSystem" version="0.9.10" targetFramework="net461" />
+  <package id="Ghpr.MSTest.SpecFlowPlugin" version="0.9.9.9" targetFramework="net461" />
+  <package id="Ghpr.MSTest.TestContext.SpecFlowPlugin" version="0.9.4" targetFramework="net461" />
+  <package id="Ghpr.SpecFlow.Common" version="0.9.9.9" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.7.0" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="SpecFlow" version="3.4.31" targetFramework="net461" />
+  <package id="SpecFlow.CustomPlugin" version="3.4.31" targetFramework="net461" />
+  <package id="SpecFlow.MsTest" version="3.4.31" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="3.4.31" targetFramework="net461" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Principal" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
 </packages>
